...
                            }
                        },
                        label = {
                            Text(
                                when (type) {
                                    FilterType.DAY -> "Gün"
                                    FilterType.WEEK -> "Hafta"
                                    FilterType.MONTH -> "Ay"
                                    FilterType.CUSTOM -> "Özel"
                                }
                            )
                        },
                        modifier = Modifier.weight(1f),
                        colors = FilterChipDefaults.filterChipColors(
...
